# supermanager

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml
supermanager/: actions.py  dir.tcss  main.py
supermanager/scripts/: add.sh  chmod_apply.sh  copy.sh  delete.sh  find_item.sh  get_dir.sh  get_pinned_items.sh  move.sh  pin_item.sh  rename.sh  unpin_item.sh
supermanager/ui/: __init__.py  add_item_screen.py  confirmation_screen.py  dir_viewer_app.py  fileicons.py  keymap_help_screen.py  permission_screen.py  preview_pane.py  rename_item_screen.py  search_screen.py
