[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supermanager"
version = "0.1.0"
authors = [{ name = "kayesFerdous", email = "kayesfardows@gmail.com" }]
description = "A powerful file manager for your terminal."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["textual"]

[project.scripts]
supermanager = "supermanager.main:main"

[tool.setuptools]
include-package-data = true
